fixes feed page top gap

--- a/src/pages/index/FeedPg.module.scss
+++ b/src/pages/index/FeedPg.module.scss
@@ -78,7 +78,7 @@ body {
 }
 
 .feedContainer {
-  margin-top: 77px;
+  margin-top: 60px;
   padding-bottom: 50px;
 }
 
